Inici: se le inicia a agregar el estilo en css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta http-equive="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Woop</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -13,7 +14,7 @@
             <a href="#" class="logo">Logo</a>
             <input type="checkbox" id="menu">
             <label for="menu">
-                <img src="./imagenes/menu.jng" class="menu icono" alt="">
+                <img src="./imagenes/menu.png" class="menu icono" alt="">
             </label>
             <nav class="navbar">
                 <ul>
@@ -95,7 +96,7 @@
         <div class="general-1">
             <h2>Para modificar</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit porro sequi minima soluta libero consectetur optio iure ex earum quo repellendus nostrum quas nulla accusantium, nihil sapiente sint rem assumenda?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit porro sequi minima soluta libero consectetur optio iure ex earum quo repellendus nostrum quas nulla accusantium, nihil sapiente sint rem assumenda
             </p>
             <a href="#" class="btn-1">Informacion</a>
         </div>
@@ -110,7 +111,7 @@
         <div class="general-1">
             <h2>Para modificar</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit porro sequi minima soluta libero consectetur optio iure ex earum quo repellendus nostrum quas nulla accusantium, nihil sapiente sint rem assumenda?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit porro sequi minima soluta libero consectetur optio iure ex earum quo repellendus nostrum quas nulla accusantium, nihil sapiente sint rem assumenda
             </p>
             <a href="#" class="btn-1">Informacion</a>
         </div>
